# EustressEngine

./: .cargo-watch.toml  .gitignore  .mcp.json  LICENSE  LICENSE-COMMERCIAL.md  README.md  RELEASE.md  Start.md  build_output.txt  build_result.txt  build_result2.txt  build_result3.txt  check_output.txt  deny.toml  forge-orchestration-0.4.2.crate  test_viewport.ps1  unwrap_inventory.txt
eustress/: .gitignore  BENCHMARK_EUSTRESSSTREAM.md  BUILD_FIX.cmd  Cargo.toml  build-and-run.ps1  build-client.cmd  build_errors.txt  check-all.cmd  errors.txt  eustress_profile.txt  eustress_profile_phases.txt  fix-and-build.ps1  generation_server.py  generation_server_production.py  requirements.txt  run-client.cmd  run-engine.cmd  stderr.txt  stdout.txt
eustress/.cargo/: config.toml
eustress/.patches/gpu-allocator-fresh/: Cargo.toml
eustress/.patches/iggy_common-0.9.0/: .cargo_vcs_info.json  Cargo.toml
eustress/.patches/wgpu/: .deny.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md
eustress/.patches/wgpu-hal/: Cargo.toml
eustress/.patches/wgpu/.github/: pull_request_template.md
eustress/.patches/wgpu/benches/: README.md
eustress/.patches/wgpu/cts_runner/: Cargo.toml  README.md  fail.lst  revision.txt  skip.lst  test.lst
eustress/.patches/wgpu/deno_webgpu/: 01_webgpu.js  adapter.rs  byow.rs  command_encoder.rs  device.rs  error.rs  lib.rs  pipeline_layout.rs  render_bundle.rs  render_pass.rs  texture.rs  webidl.rs
eustress/.patches/wgpu/docs/: broadcast_license.nu  release-checklist.md  review-checklist.md  testing.md
eustress/.patches/wgpu/examples/: README.md
eustress/.patches/wgpu/naga/: Cargo.toml
eustress/.patches/wgpu/naga-test/: Cargo.toml
eustress/.patches/wgpu/tests/: Cargo.toml
eustress/.patches/wgpu/wgpu/: Cargo.toml
eustress/.patches/wgpu/wgpu-core/: Cargo.toml
eustress/.patches/wgpu/wgpu-hal/: Cargo.toml
eustress/.patches/wgpu/wgpu-info/: Cargo.toml
eustress/.patches/wgpu/wgpu-types/: Cargo.toml
eustress/benches/instance-capacity/: Cargo.toml
eustress/benches/instance-capacity/src/: main.rs
eustress/crates/backend/: .env.example  Cargo.toml  Start.md  eustress.db
eustress/crates/backend/src/: auth.rs  community.rs  config.rs  db.rs  error.rs  experiences.rs  gallery.rs  main.rs  marketplace.rs  projects.rs  steam.rs
eustress/crates/bliss/: Cargo.toml
eustress/crates/bliss/src/: api.rs  blockchain.rs  contribution.rs  cosign.rs  crypto.rs  error.rs  lib.rs  node.rs  wallet.rs
eustress/crates/cad/: Cargo.toml
eustress/crates/cad/src/: error.rs  eval.rs  export_glb.rs  feature.rs  feature_tree.rs  lib.rs  parts_csg.rs  quantity.rs  sketch.rs  solver.rs  templates.rs
eustress/crates/cad/tests/: shapeops_probe.rs  solver_and_shell.rs  templates.rs  tessellate.rs
eustress/crates/cli/: Cargo.toml
eustress/crates/cli/src/: main.rs
eustress/crates/client/: Cargo.toml
eustress/crates/client/src/: main.rs
eustress/crates/common/: Cargo.toml  build.rs
eustress/crates/common/bevy-camera-controller/: Cargo.toml
eustress/crates/common/eustress-networking/: Cargo.toml
eustress/crates/common/src/: attributes.rs  brick_palette.rs  change_queue.rs  classes.rs  color_wheels.rs  default_scene.rs  dimension.rs  eustress_format.rs  events.rs  file_events.rs  iggy_delta.rs  iggy_queue.rs  instance_create.rs  lib.rs  orbital.rs  parameters.rs  project_manifest.rs  properties.rs  scene.rs  scene_delta.rs  sim_record.rs  sim_stream.rs  toml_materializer.rs  ui_types.rs  units.rs
eustress/crates/common/tests/: determinism.rs
eustress/crates/data/: Cargo.toml
eustress/crates/data-store/: Cargo.toml
eustress/crates/data-store/src/: lib.rs
eustress/crates/data/src/: decimate.rs  error.rs  import.rs  lib.rs  ml.rs  numerics.rs  spectral.rs
eustress/crates/data/tests/: p1d_roundtrip.rs
eustress/crates/embedvec/: Cargo.toml
eustress/crates/embedvec/src/: fjall_store.rs  knowledge.rs  ledger.rs  lib.rs  memory.rs  persistence.rs  plugin.rs  resource.rs
eustress/crates/engine/: Cargo.toml  build.rs
eustress/crates/engine/assets/: icon.icns
eustress/crates/engine/src/: accessibility.rs  adornment_renderer.rs  ai_camera.rs  align_distribute.rs  app_core.rs  array_tools.rs  attachment_editor_tool.rs  attribute_tag_migration.rs  auth.rs  billboard_gui.rs  bliss_tracker.rs  (+91 more)
eustress/crates/eustress-fjall/: Cargo.toml
eustress/crates/eustress-space/: Cargo.toml
eustress/crates/forge/: Cargo.toml
eustress/crates/forge-sdk/: Cargo.toml
eustress/crates/functions/: Cargo.toml
eustress/crates/genesis/: Cargo.toml
eustress/crates/geo/: Cargo.toml
eustress/crates/identity/: Cargo.toml
eustress/crates/mcp/: Cargo.toml  README.md
eustress/crates/mcp-server/: ARCHITECTURE.md  Cargo.toml  README.md
eustress/crates/mesh-edit/: Cargo.toml
eustress/crates/player-android/: build.gradle  settings.gradle
eustress/crates/player-ios/: ExportOptions.plist
eustress/crates/player-mobile/: Cargo.toml
eustress/crates/ppisp/: Cargo.toml
eustress/crates/radiance/: Cargo.toml
eustress/crates/roblox-assets/: Cargo.toml
eustress/crates/roblox-import/: Cargo.toml  README.md
eustress/crates/runtime/: Cargo.toml
eustress/crates/server/: Cargo.toml
eustress/crates/spatial-llm/: Cargo.toml
eustress/crates/stream/: Cargo.toml
eustress/crates/stream-node/: Cargo.toml
eustress/crates/texture-gen/: Cargo.toml
eustress/crates/tools/: Cargo.toml
eustress/crates/web/: .env.example  Cargo.toml  README.md  Trunk.toml  index.html
eustress/crates/workshop/: Cargo.toml
eustress/crates/worlddb/: Cargo.toml
eustress/docs/issues/: BEVY_INTEGRATION_NEEDS_WORK.md
eustress/example_scenes/: sample_game.eustressengine
eustress/scripts/: migrate_udim2.py  register_file_association.ps1
eustress/target-lsp-check/: .rustc_info.json
tools/color_wheel/: .gitignore  README.md  pyproject.toml  requirements.txt
tools/color_wheel/color_wheel/: __init__.py  __main__.py  axes.py  cluster.py  loader.py  manifest.py  name.py  oklch.py  types.py
tools/color_wheel/tests/: test_pipeline.py
(+1609 files in other folders)
