[workspace]
members = [
    "crates/common",
    "crates/common/bevy-camera-controller",
    "crates/common/eustress-networking",
    "crates/runtime",
    "crates/engine",
    "crates/client",
    "crates/server",
    "crates/web",
    "crates/backend",
    "crates/forge",
    "crates/forge-sdk",
    "crates/mcp",
    "crates/player-mobile",
    "crates/bliss",
    "crates/embedvec",
    "crates/spatial-llm"
]

resolver = "2"

[workspace.dependencies]
# Core Bevy 0.18 (uses wgpu 28 for Slint GPU renderer compatibility)
bevy = { version = "0.18", default-features = false }

# UI - Slint from git with software renderer (renders to pixel buffer, uploaded to Bevy texture)
slint = { git = "https://github.com/slint-ui/slint", branch = "master", features = ["std", "compat-1-2", "renderer-software"] }
# egui REMOVED - using Slint exclusively

# Input - DISABLED until leafwing-input-manager supports Bevy 0.19
# leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main", default-features = false, features = ["asset", "mouse", "keyboard"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rfd = "0.15"

# Networking (Lightyear 0.19 + QUIC)
lightyear = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
rcgen = "0.13"
bincode = "1.3"

# P2P & CRDTs for Persistent Distributed Worlds
loro = "1.4"  # High-perf CRDT library
bevy_quinnet = "0.14"  # QUIC client/server for P2P (Bevy 0.19 compatible)
quinn = "0.11"  # Underlying QUIC transport

# Physics (Avian from git main - supports Bevy 0.18.0)
avian3d = { git = "https://github.com/avianphysics/avian", branch = "main", default-features = false, features = ["3d", "f32", "parry-f32", "debug-plugin", "parallel", "collider-from-mesh", "bevy_scene"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Hotpatching profile - use with: cargo run --profile hotpatch
[profile.hotpatch]
inherits = "dev"
opt-level = 1

[profile.hotpatch.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

