[workspace]
members = [
    "crates/common",
    "crates/common/bevy-camera-controller",
    "crates/common/eustress-networking",
    "crates/runtime",
    "crates/engine",
    "crates/client",
    "crates/server",
    "crates/web",
    "crates/backend",
    "crates/forge",
    "crates/forge-sdk",
    "crates/mcp",
    "crates/mcp-server",
    "crates/player-mobile",
    "crates/bliss",
    "crates/cad",
    "crates/mesh-edit",
    "crates/embedvec",
    "crates/spatial-llm",
    "crates/geo",
    "crates/texture-gen",
    "crates/workshop",
    "crates/tools",
    "crates/cli",
    "crates/stream",
    "crates/stream-node",
    "crates/functions",
    "crates/identity",
    "benches/instance-capacity"
]

resolver = "2"

[workspace.dependencies]
# Core Bevy 0.18 (uses wgpu 28 for Slint GPU renderer compatibility)
bevy = { version = "0.18", default-features = false }

# UI - Slint from git with software renderer + FemtoVG GPU renderer (OpenGL)
# NOTE: renderer-femtovg-wgpu would share Bevy's wgpu device, but Slint master targets wgpu 28
# while Bevy 0.18 uses wgpu 27. Switch to renderer-femtovg-wgpu when Bevy upgrades to wgpu 28.
slint = { git = "https://github.com/slint-ui/slint", branch = "master", features = ["std", "compat-1-2", "renderer-software", "renderer-femtovg"] }
# egui REMOVED - using Slint exclusively

# Input - DISABLED until leafwing-input-manager supports Bevy 0.19
# leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main", default-features = false, features = ["asset", "mouse", "keyboard"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rfd = "0.15"

# Networking (Lightyear 0.19 + QUIC)
lightyear = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
rcgen = "0.13"
bincode = "1.3"

# P2P & CRDTs for Persistent Distributed Worlds
loro = "1.4"  # High-perf CRDT library
bevy_quinnet = "0.14"  # QUIC client/server for P2P (Bevy 0.19 compatible)
quinn = "0.11"  # Underlying QUIC transport

# Physics (Avian 0.6.0 — crates.io release, Bevy 0.18 compatible)
avian3d = { version = "0.6", default-features = false, features = ["3d", "f32", "parry-f32", "debug-plugin", "parallel", "collider-from-mesh", "bevy_scene", "xpbd_joints"] }

# Luau scripting runtime (Roblox Luau via mlua)
mlua = { version = "0.10", features = ["luau", "serialize", "send"] }

# bytes — shared buffer type for streaming payloads
bytes = "1.7"

# Zero-copy serialization for ECS scene deltas (rkyv 0.8)
rkyv = { version = "0.8", features = ["std"] }

# CAD BRep kernel — `truck` is a pure-Rust parametric modeler (curves /
# surfaces / topology / CSG / meshing / STEP I/O). Underpins the
# eustress-cad crate; unblocks parametric Gap Fill + Resize Align
# (TOOLSET.md Phase 1) and all of TOOLSET_CAD.md Phase 0-2.
#
# **Pin strategy (2026-04-22)** — the truck ecosystem publishes
# sub-crates at independent cadences. These are the actual latest
# versions on crates.io *and* cargo's resolver converges on a single
# copy of every shared dep (verified with `cargo tree` on a probe
# workspace). An aspirational "all at 0.6" pin fails because
# truck-base/-geometry never hit 0.6, and truck-shapeops/-stepio
# remain on older majors. Update each line individually after
# verifying the ecosystem is still coherent.
truck-base      = "0.5"    # latest: 0.5.0 — base traits + cgmath64
truck-geometry  = "0.5"    # latest: 0.5.0 — B-spline / NURBS
truck-topology  = "0.6"    # latest: 0.6.0 — vertex/edge/wire/face/shell
truck-modeling  = "0.6"    # latest: 0.6.0 — extrude / revolve / sweep
truck-meshalgo  = "0.4"    # latest: 0.4.0 — tessellation
truck-shapeops  = "0.4"    # latest: 0.4.0 — boolean or / and / not
truck-stepio    = "0.3"    # latest: 0.3.0 — STEP import/export

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

# Hotpatching profile - use with: cargo run --profile hotpatch
[profile.hotpatch]
inherits = "dev"
opt-level = 1

[profile.hotpatch.package."*"]
opt-level = 3

# Patch gpu-allocator to use windows 0.58 (matches wgpu-hal's windows version)
[patch.crates-io]
gpu-allocator = { path = ".patches/gpu-allocator-fresh" }

[profile.release]
opt-level = 3
lto = false
codegen-units = 8
strip = true


