# =============================================================================
# Eustress Backend - API Server
# =============================================================================
# Table of Contents:
# 1. Package Metadata
# 2. Dependencies (Axum, Auth, Database)
# 3. Features
# =============================================================================

[package]
name = "eustress-backend"
version = "0.1.0"
edition = "2021"
description = "Eustress Backend API Server - Authentication, Projects, Assets"
authors = ["WeaveSolutions <admin@weave.solutions>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "eustress-api"
path = "src/main.rs"

# =============================================================================
# 1. Dependencies
# =============================================================================

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Steam OpenID
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Database (SQLx with SQLite for simplicity)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[features]
default = []
