# =============================================================================
# Eustress Backend - Content API Server
# =============================================================================
# Simulations, marketplace, projects, gallery, community.
# Auth validated via JWT from Cloudflare Worker (api.eustress.dev).
# =============================================================================

[package]
name = "eustress-backend"
version = "0.1.0"
edition = "2021"
description = "Eustress Content API Server — simulations, marketplace, projects"
authors = ["WeaveSolutions <admin@weave.solutions>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "eustress-api"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# JWT validation (shared secret with Cloudflare Worker)
jsonwebtoken = "9"

# Database (SQLx with SQLite — content only, no user data)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
