[package]
name = "eustress-bliss"
version = "0.1.0"
edition = "2021"
description = "Bliss (BLS) integration for EustressEngine — Light/Full node, contribution tracking, co-signing"
authors = ["EustressEngine Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Official Bliss crates from crates.io
bliss-core = "0.1.1"
bliss-crypto = "0.1.1"
bliss-embedded = "0.1"
bliss-events = "0.1"
bliss-wallet = "0.1"

# Bliss SDK — QUIC transport for node communication
bliss-sdk = { version = "0.1", optional = true }

# Core async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = "0.1"

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client for witness co-signing
reqwest = { version = "0.12", features = ["json"] }

# Node API server (co-signing + identity verification)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Crypto utilities
rand = "0.8"
hex = "0.4"

# Configuration
toml = "0.8"

[features]
default = ["light-node"]
# Light node — runs by default in every EustressEngine instance.
light-node = []
# Full node — opt-in, +10% BLS bonus, block production, ~2GB RAM.
full-node = ["bliss-sdk"]
