[package]
name = "eustress-client"
version = "0.1.0"
edition = "2021"
description = "Eustress Client - Generative Player & Renderer"

[[bin]]
name = "eustress-client"
path = "src/main.rs"

[dependencies]
# Workspace members
eustress-common = { path = "../common" }
eustress-networking = { path = "../common/eustress-networking", features = ["p2p"] }
bevy-camera-controller = { path = "../common/bevy-camera-controller" }

# Workspace dependencies (Bevy 0.17)
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_animation",
    "bevy_color",
    "default_font",
    "bevy_asset",
    "png",
    "hdr",
    "ktx2",
    "x11",
    "wayland",
    "multi_threaded",
    "animation",  # Required for GLTF animation loading (enables bevy_gltf/bevy_animation)
] }

# Physics (Bevy 0.17 compatible)
avian3d = "0.4"
serde = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }

# Enhancement pipeline (Bevy 0.17 compatible)
bevy_egui = { workspace = true }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
dirs = { workspace = true }
sha2 = "0.10"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
gltf = "1.4.1"

# AI/ML (uncomment when ready)
# candle-core = { git = "https://github.com/huggingface/candle.git", rev = "candle-v0.6.0" }
# candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "candle-v0.6.0" }
# candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "candle-v0.6.0" }

# Client-specific dependencies
# bevy_hanabi = "0.12"  # Particle effects
# bevy_atmosphere = "0.10"  # Sky rendering
# Add AI/ML deps here later:
# candle-core = { version = "0.6", features = ["cuda"] }
# candle-transformers = "0.6"

[features]
default = []
dev = ["bevy/dynamic_linking"]
hotpatch = ["bevy/hotpatching"]
