[package]
name = "eustress-embedvec"
version = "0.1.0"
edition = "2021"
description = "Vector database integration for Eustress Engine with HNSW indexing, property embeddings, and semantic search"
license = "MIT"

[dependencies]
# Core Bevy
bevy = { workspace = true, features = ["serialize"] }

# Vector database with HNSW indexing, H4/E8 lattice quantization
embedvec = { version = "0.7.0", default-features = false }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

# Async runtime (optional, for async flush in persistence)
tokio = { workspace = true, optional = true }

# Sled embedded database (optional, pure-Rust, for KnowledgeStore + PersistentIndex)
sled = { version = "0.34", optional = true }

# Fjall embedded LSM database (optional, cold-tier partition layout). The
# standard workspace KV store (same engine as worlddb / eustress-fjall) — pure
# Rust, no libclang/LLVM build dependency.
fjall = { workspace = true, optional = true }

[features]
default = []
# Enable Sled-based persistence (pure Rust, no libclang needed)
persistence = ["sled", "tokio"]
# Enable Sled persistence alias (same as persistence)
persistence-sled = ["persistence"]
# Enable Fjall-based persistence (LSM-tree; standard workspace KV, pure Rust)
persistence-fjall = ["fjall", "tokio"]
# Enable SIMD acceleration
simd = ["embedvec/simd"]
# Full feature set (Sled persistence — use persistence-fjall separately if needed)
full = ["persistence", "simd"]

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
